--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       margin: 0 auto;
       width: 700px;
     }
-    h1 { font-size: 3.8em; color: #bb49c0; margin-bottom: 3px; }
+    h1 { font-size: 3.8em; color: black; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #bb49c0; }
-    h3 { text-align: center; color: #bb49c0; }
-    a { color: #bb49c0; }
+    h2 { font-size: 1.5em; color: black; }
+    h3 { text-align: center; color: black; }
+    a { color: black; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
     pre { background: #000; color: #fff; padding: 15px;}
@@ -52,9 +52,9 @@
     <h2>License</h2>
 <p>LGPL</p>
 <h2>Authors</h2>
-<p>Wil Cooley (wcooley@pdx.edu)<br/><br/>      </p>
+<p>Wil Cooley (wcooley@nakedape.cc)<br/><br/>      </p>
 <h2>Contact</h2>
-<p>Wil Cooley (wilcooley@googlemail.com)<br/>      </p>
+<p>Wil Cooley (wcooley@nakedape.cc)<br/>      </p>
 
 
     <h2>Download</h2>
